commit application.properties, pom.xml. added the dependency

--- a/housekeeper-service/src/main/resources/application.properties
+++ b/housekeeper-service/src/main/resources/application.properties
@@ -23,6 +23,9 @@ management.endpoints.web.exposure.include=metrics
 #logging.level.io.r2dbc.postgresql.PARAM=DEBUG
 # Additional R2DBC Settings
 #spring.data.r2dbc.repositories.enabled=true
-
+# Redis Config
+#spring.cache.type=redis
+#spring.redis.host=localhost
+#spring.redis.port=6379
 
 
