commit application.properties, pom.xml. added the dependency

--- a/housekeeper-service/src/main/resources/application.properties
+++ b/housekeeper-service/src/main/resources/application.properties
@@ -24,8 +24,8 @@ management.endpoints.web.exposure.include=metrics
 # Additional R2DBC Settings
 #spring.data.r2dbc.repositories.enabled=true
 # Redis Config
-#spring.cache.type=redis
-#spring.redis.host=localhost
-#spring.redis.port=6379
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
 
 
